Corrections in layout of containers. Using flexbox.

--- a/src/css/slidershow.css
+++ b/src/css/slidershow.css
@@ -4,31 +4,18 @@ body {
 }
 
 .slider-main-container {
-	display: inline-flex;
+	display: flex;
+	flex-flow: row;
+	flex-wrap: wrap;
+	flex-direction: column;
 	box-sizing: border-box;
 	text-align: left;
-	max-width: 460px;
-	max-height: 460px;
+	max-width: 480px;
+	max-height: 480px;
 	margin: auto;
-	padding: 0;
-	background-color: white;
+	padding: 2px;
+	background-color: whitesmoke;
 }
-
-.slider-main-container-horizontal {
-	display: inline-flex;
-	flex-fow: wrap;
-	flex-wrap: wrap;
-	max-width: 460px;
-	max-height: 460px;
-	margin: auto;
-	padding: 0;
-	background-color: white;
-}
-/*.slider-main-thumnail-top{}
-.slider-main-thumnail-right{}
-.slider-main-thumnail-bottom{}
-.slider-main-thumnail-left{}
-*/
 
 .slider-main-thumbnail-bottom {
 	display: flex;
@@ -43,6 +30,7 @@ body {
 	background-color: white;
 	box-shadow: 1px 1px 2px 2px #aaa;
 }
+
 .slider-main-thumbnail-bottom img {
 	display: inline;
 	max-width: 80px;
@@ -59,8 +47,8 @@ body {
 	padding: 4px;
 	margin: 8px auto;
 	box-sizing: border-box;
-	border: 4px solid #ddd;
-	border-radius: 6px;
+	/*border: 4px solid #ddd;
+	border-radius: 6px;*/
 	background-color: white;
 }
 
@@ -78,7 +66,7 @@ body {
 .slider-container {
     position: relative;
     margin: auto;
-    max-width: 400px;
+    max-width: 360px;
     vertical-align: center;
 	text-align: center;
 }
@@ -86,7 +74,7 @@ body {
 .slider-image {
     display: block;
     margin: auto;
-	padding: 4px;
+	padding: 8px;
 	vertical-align: center;
 }
 
@@ -120,6 +108,10 @@ body {
 
 .slider-image img {
     text-align: center;
+	margin 0 auto;
+	padding: 0;
+	border-sizing: border-box;
+	border: 6px solid white;
     animation-name: fade;
     animation-duration: 1s;
     -webkit-animation-name: fade;
